--- a/client/src/pages/AllPosts.css
+++ b/client/src/pages/AllPosts.css
@@ -1,9 +1,12 @@
 /* Full-page background */
-.background {
-    background: url('https://source.unsplash.com/random/1600x900') no-repeat center center/cover;
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    filter: blur(10px); /* Apply blur to the background image */
+.background-container {
+  background-color: black;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  filter: blur(2px); /* Apply blur to the background image */
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: "center";
 }
